@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2009  Vasco Nunes, Piotr Ożarowski
 
 
+2009-12-23  Michael Jahn
+	* updated movie plugin Cinematografo
+
 2009-12-22  Piotr Ożarowski
 	* Fix few spelling mistakes (thanks to Sean Cass)
 	* Version changed to 0.11
